# compost

./: Cargo.toml  README.md
src/codegen/: Cargo.toml
src/codegen/src/: main.rs
src/compost/: Cargo.toml
src/compost-experimental/: Cargo.toml
src/compost-experimental/src/: decompose.rs  decompose.rs.jinja  lib.rs
src/compost/examples/: basic.rs
src/compost/src/: decompose.rs  decompose.rs.jinja  lib.rs
src/compost2/: Cargo.toml
src/compost2/src/: lib.rs
src/decompose/: Cargo.toml
src/decompose/examples/: basic.rs
src/decompose/src/: lib.rs
